// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OfficesTab should match a snapshot where there are no offices 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <div
        class="el-flex-container el-flex-justify-between"
      >
        <mock-styled.h1
          classname="el-text-base"
        >
          SOME_NAME
           Offices
        </mock-styled.h1>
      </div>
      <form>
        <mock-styled.div
          classname="el-form-layout-has-margin el-fade-in"
        >
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                classname=""
                id="test-static-id"
                name="name"
                placeholder="Search for an office"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Search
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <div
              class="el-flex-container el-flex-grow el-flex-align-end el-hfull"
            >
              <mock-styled.div>
                <mock-styled.div
                  classname="el-button-group-align-left"
                >
                  <mock-styled.button
                    classname="el-intent-primary"
                    type="submit"
                  >
                    <mock-styled.div />
                    Search
                  </mock-styled.button>
                </mock-styled.div>
              </mock-styled.div>
            </div>
          </mock-styled.div>
        </mock-styled.div>
      </form>
      <mock-styled.div
        classname=""
      >
        <mock-styled.div>
          <mock-styled.div />
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <div
      class="el-flex-container el-flex-justify-between"
    >
      <mock-styled.h1
        classname="el-text-base"
      >
        SOME_NAME
         Offices
      </mock-styled.h1>
    </div>
    <form>
      <mock-styled.div
        classname="el-form-layout-has-margin el-fade-in"
      >
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              classname=""
              id="test-static-id"
              name="name"
              placeholder="Search for an office"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Search
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <div
            class="el-flex-container el-flex-grow el-flex-align-end el-hfull"
          >
            <mock-styled.div>
              <mock-styled.div
                classname="el-button-group-align-left"
              >
                <mock-styled.button
                  classname="el-intent-primary"
                  type="submit"
                >
                  <mock-styled.div />
                  Search
                </mock-styled.button>
              </mock-styled.div>
            </mock-styled.div>
          </div>
        </mock-styled.div>
      </mock-styled.div>
    </form>
    <mock-styled.div
      classname=""
    >
      <mock-styled.div>
        <mock-styled.div />
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`OfficesTab should match a snapshot where there are offices 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <div
        class="el-flex-container el-flex-justify-between"
      >
        <mock-styled.h1
          classname="el-text-base"
        >
          SOME_NAME
           Offices
        </mock-styled.h1>
      </div>
      <form>
        <mock-styled.div
          classname="el-form-layout-has-margin el-fade-in"
        >
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                classname=""
                id="test-static-id"
                name="name"
                placeholder="Search for an office"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Search
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <div
              class="el-flex-container el-flex-grow el-flex-align-end el-hfull"
            >
              <mock-styled.div>
                <mock-styled.div
                  classname="el-button-group-align-left"
                >
                  <mock-styled.button
                    classname="el-intent-primary"
                    type="submit"
                  >
                    <mock-styled.div />
                    Search
                  </mock-styled.button>
                </mock-styled.div>
              </mock-styled.div>
            </div>
          </mock-styled.div>
        </mock-styled.div>
      </form>
      <mock-styled.div
        classname=""
      >
        <mock-styled.div>
          <mock-styled.div />
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <div
      class="el-flex-container el-flex-justify-between"
    >
      <mock-styled.h1
        classname="el-text-base"
      >
        SOME_NAME
         Offices
      </mock-styled.h1>
    </div>
    <form>
      <mock-styled.div
        classname="el-form-layout-has-margin el-fade-in"
      >
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              classname=""
              id="test-static-id"
              name="name"
              placeholder="Search for an office"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Search
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <div
            class="el-flex-container el-flex-grow el-flex-align-end el-hfull"
          >
            <mock-styled.div>
              <mock-styled.div
                classname="el-button-group-align-left"
              >
                <mock-styled.button
                  classname="el-intent-primary"
                  type="submit"
                >
                  <mock-styled.div />
                  Search
                </mock-styled.button>
              </mock-styled.div>
            </mock-styled.div>
          </div>
        </mock-styled.div>
      </mock-styled.div>
    </form>
    <mock-styled.div
      classname=""
    >
      <mock-styled.div>
        <mock-styled.div />
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`OfficesTab should match a snapshot where there is no orgId 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <div
        class="el-flex-container el-flex-justify-between"
      >
        <mock-styled.h1
          classname="el-text-base"
        >
          Offices
        </mock-styled.h1>
      </div>
      <form>
        <mock-styled.div
          classname="el-form-layout-has-margin el-fade-in"
        >
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                classname=""
                id="test-static-id"
                name="name"
                placeholder="Search for an office"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Search
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <div
              class="el-flex-container el-flex-grow el-flex-align-end el-hfull"
            >
              <mock-styled.div>
                <mock-styled.div
                  classname="el-button-group-align-left"
                >
                  <mock-styled.button
                    classname="el-intent-primary"
                    type="submit"
                  >
                    <mock-styled.div />
                    Search
                  </mock-styled.button>
                </mock-styled.div>
              </mock-styled.div>
            </div>
          </mock-styled.div>
        </mock-styled.div>
      </form>
      <mock-styled.div
        classname="el-intent-primary el-is-active el-pn-is-full-width el-pn-is-inline"
        role="alertdialog"
      >
        <div
          class="el-pn-icon"
          data-testid="close-icon"
        >
          <mock-styled.span
            classname="el-icon-new"
            role="img"
            style="font-size: 1.25rem;"
          >
            <svg
              fill="none"
              height="1em"
              style="font-size: 1.25rem;"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10A10 10 0 0 0 12 2m1.143 15.714h-2.286v-6h2.286zm-1.143-8a1.714 1.714 0 1 1 0-3.428 1.714 1.714 0 0 1 0 3.428"
                fill="currentColor"
              />
            </svg>
          </mock-styled.span>
        </div>
        <div
          class="el-pn-content"
        >
          No organisation selected. You need to select an organisation to view offices.
        </div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <div
      class="el-flex-container el-flex-justify-between"
    >
      <mock-styled.h1
        classname="el-text-base"
      >
        Offices
      </mock-styled.h1>
    </div>
    <form>
      <mock-styled.div
        classname="el-form-layout-has-margin el-fade-in"
      >
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              classname=""
              id="test-static-id"
              name="name"
              placeholder="Search for an office"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Search
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <div
            class="el-flex-container el-flex-grow el-flex-align-end el-hfull"
          >
            <mock-styled.div>
              <mock-styled.div
                classname="el-button-group-align-left"
              >
                <mock-styled.button
                  classname="el-intent-primary"
                  type="submit"
                >
                  <mock-styled.div />
                  Search
                </mock-styled.button>
              </mock-styled.div>
            </mock-styled.div>
          </div>
        </mock-styled.div>
      </mock-styled.div>
    </form>
    <mock-styled.div
      classname="el-intent-primary el-is-active el-pn-is-full-width el-pn-is-inline"
      role="alertdialog"
    >
      <div
        class="el-pn-icon"
        data-testid="close-icon"
      >
        <mock-styled.span
          classname="el-icon-new"
          role="img"
          style="font-size: 1.25rem;"
        >
          <svg
            fill="none"
            height="1em"
            style="font-size: 1.25rem;"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10A10 10 0 0 0 12 2m1.143 15.714h-2.286v-6h2.286zm-1.143-8a1.714 1.714 0 1 1 0-3.428 1.714 1.714 0 0 1 0 3.428"
              fill="currentColor"
            />
          </svg>
        </mock-styled.span>
      </div>
      <div
        class="el-pn-content"
      >
        No organisation selected. You need to select an organisation to view offices.
      </div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
